--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,8 @@
 
     <div class="container">
         <h2>Prześlij obraz i wybierz numer Socio</h2>
-        <h3>Twoje zdjęcie powinno być kwadratowe. Zostanie wykadrowane do środka obrazu</h3>
+        <h5>Twoje zdjęcie powinno być kwadratowe</h5>
+        <h5>Zostanie wykadrowane do środka obrazu</h5>
         <form action="/" method="POST" enctype="multipart/form-data">
             <label for="image">Wybierz obraz:</label>
             <input type="file" name="image" id="image" accept="image/*" required><br>
